--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,10 @@
 /* Custom CSS for homeown created and designed by @julienjacques April 22, 2016 */
 
 .podcast-image {
-  width: 1.10101em; 
+  width: 32px; 
 }
 
-.podcast-icon {
-  width: 1.08080em;
 
-}
 
 .thank-you .parallax {
     height: 650px;
