--- a/assets/css/examples.css
+++ b/assets/css/examples.css
@@ -159,7 +159,31 @@
   border-radius: 6px 0 0 6px;
   color: #FFFFFF;
 }
-.contact-us .company-description h4 {
+.thank-you .company-description h4 {
+  margin: 0;
+}
+
+.thank-you .navbar-transparent {
+  background-color: rgba(0, 0, 0, 0.55);
+  padding: 0;
+}
+.thank-you .parallax {
+  height: 500px;
+}
+.thank-you .contact-info p {
+  font-size: 15px;
+}
+.thank-you .company-description {
+  position: absolute;
+  right: 0;
+  top: 220px;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 3;
+  padding: 20px 60px 20px 20px;
+  border-radius: 6px 0 0 6px;
+  color: #FFFFFF;
+}
+.thank-you .company-description h4 {
   margin: 0;
 }
 
